[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://gui/Theme.theme" type="Theme" id=2]
[ext_resource path="res://gui/MainMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="MainMenu" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 304.0
margin_bottom = 164.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 103.0
margin_bottom = 164.0
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.4
custom_constants/separation = 4
alignment = 2

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 103.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
text = "common_new_game"

[node name="LoadGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 102.0
margin_right = 104.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
text = "common_load_game"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 103.0
margin_bottom = 142.0
mouse_default_cursor_shape = 2
text = "common_settings"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 103.0
margin_bottom = 164.0
mouse_default_cursor_shape = 2
text = "common_quit_game"

[node name="GameLogoTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_left = 107.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 6
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
